<resources>
    <string name="app_name">My Application Lists To Do</string>

    <!--TODOAPP-->
    <string name="TDAWelcome">Welcome</string>
    <string name="TDACategory">Category</string>
    <string name="TDAC_task">task</string>
    <string name="HintTask">Add a Task</string>
    <string name="Business">Business</string>
    <string name="Personal">Personal</string>
    <string name="Other">Other</string>
    <string name="CreateTask">CreateTask</string>
</resources>