<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:background="@color/background_app"
    android:padding="16dp"
    android:layout_height="wrap_content">
    
    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/HintTask"
        />

    <RadioGroup
        android:id="@+id/rgCategoris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/rbBusiness"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Business"
        android:checked="true"
        android:textColor="@color/white"
        android:buttonTint="@color/business_category"
        />

        <RadioButton
        android:id="@+id/rbPersonal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Personal"
        android:checked="true"
        android:textColor="@color/white"
        android:buttonTint="@color/personal_category"
        />

        <RadioButton
        android:id="@+id/rbOther"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Other"
        android:checked="true"
        android:textColor="@color/white"
        android:buttonTint="@color/other_category"
        />
    </RadioGroup>
    
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:textColor="@color/white"
        android:text="@string/CreateTask"
        />

</LinearLayout>