<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical"
    tools:context=".MainActivityToDo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/TDAWelcome"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TDACategory"
        style="@style/TODOSubtitle"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TDAC_task"
        style="@style/TODOSubtitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTask"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_height="wrap_content"/>


</LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/accent"
        android:tint="@color/white"
        android:src="@drawable/ic_add"
        android:layout_gravity="end|bottom"
        app:fabSize="normal"
        android:layout_margin="32dp"
        />
</FrameLayout>